tests/rosetta/out/Java/arena-storage-pool.error
javac error: exit status 1
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:9: error: cannot find symbol
    static Map<String,any> poolGet(List<Integer> p) {
                      ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:12: error: cannot find symbol
            return new PoolVal(p, 0);
                       ^
  symbol:   class PoolVal
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:15: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> v = p.get(idx);
                               ^
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:17: error: cannot find symbol
        return new PoolVal(p, v);
                   ^
  symbol:   class PoolVal
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:31: error: cannot find symbol
        Map<String,any> res1 = poolGet(pool);
                   ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:32: error: cannot find symbol
        pool = (List<Integer>)((any)res1.get("pool"));
                                ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:33: error: cannot find symbol
        i = (int)(Integer.parseInt(((any)res1.get("val"))));
                                     ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:34: error: cannot find symbol
        Map<String,any> res2 = poolGet(pool);
                   ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:35: error: cannot find symbol
        pool = (List<Integer>)((any)res2.get("pool"));
                                ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:36: error: cannot find symbol
        j = (int)(Integer.parseInt(((any)res2.get("val"))));
                                     ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:45: error: cannot find symbol
        Map<String,any> res3 = poolGet(pool);
                   ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:46: error: cannot find symbol
        pool = (List<Integer>)((any)res3.get("pool"));
                                ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:47: error: cannot find symbol
        i = (int)(Integer.parseInt(((any)res3.get("val"))));
                                     ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:48: error: cannot find symbol
        Map<String,any> res4 = poolGet(pool);
                   ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:49: error: cannot find symbol
        pool = (List<Integer>)((any)res4.get("pool"));
                                ^
  symbol:   class any
  location: class ArenaStoragePool
/tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java:50: error: cannot find symbol
        j = (int)(Integer.parseInt(((any)res4.get("val"))));
                                     ^
  symbol:   class any
  location: class ArenaStoragePool
Note: /tmp/TestMochiToJavaarena-storage-pool2414792243/001/ArenaStoragePool.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
16 errors
